+++++++++++
Python News
+++++++++++

What's New in Python 3.5.4 release candidate 1?
===============================================

Release date: XXXX-XX-XX

Core and Builtins
-----------------

- bpo-29935: Fixed error messages in the index() method of tuple, list and deque
  when pass indices of wrong type.

- bpo-28876: ``bool(range)`` works even if ``len(range)``
  raises :exc:`OverflowError`.

- bpo-29600: Fix wrapping coroutine return values in StopIteration.

- Issue #29537: Restore runtime compatibility with bytecode files generated by
  CPython 3.5.0 to 3.5.2, and adjust the eval loop to avoid the problems that
  could be caused by the malformed variant of the BUILD_MAP_UNPACK_WITH_CALL
  opcode that they may contain. Patch by Petr Viktorin, Serhiy Storchaka,
  and Nick Coghlan.

- Issue #28598: Support __rmod__ for subclasses of str being called before
  str.__mod__.  Patch by Martijn Pieters.

- bpo-29602: Fix incorrect handling of signed zeros in complex constructor for
  complex subclasses and for inputs having a __complex__ method. Patch
  by Serhiy Storchaka.

- bpo-29347: Fixed possibly dereferencing undefined pointers
  when creating weakref objects.

- bpo-29438: Fixed use-after-free problem in key sharing dict.

- Issue #29319: Prevent RunMainFromImporter overwriting sys.path[0].

- Issue #29337: Fixed possible BytesWarning when compare the code objects.
  Warnings could be emitted at compile time.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- bpo-30301: Fix AttributeError when using SimpleQueue.empty() under
  *spawn* and *forkserver* start methods.

- bpo-30329: imaplib and poplib now catch the Windows socket WSAEINVAL error
  (code 10022) on shutdown(SHUT_RDWR): An invalid operation was attempted.
  This error occurs sometimes on SSL connections.

- bpo-30375: Warnings emitted when compile a regular expression now always